working on unsubscribe, fix css/sizing issues.
Made the feedlist and content more dynamic.
Actually use the real height of the commandbar.
Assuming a scrollbar is 10 px which is bad - need to fix that.

--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@
   border-color: #CCCCCC;
   position: absolute;
   right: 0;
-  min-width:100px;
-  max-width:20%;
+  /*min-width:100px;
+  max-width:20%;*/
+  width:20%
 }
 .no-feed-displayed{
   font-weight: lighter;
